# catkin_ws_zonghe

./: .gitignore  .~lock.Pick and Place 任务系统框架设计.docx#  Pick and Place 任务系统框架设计.docx  fasl.txt  get_camera_params.py  result.txt  zhuaqu.txt
l515_snapshot_tool/: README.md  capture_color_once.py  capture_l515_once.py
livox_ros_driver2/config/: display_point_cloud_ROS1.rviz
livox_ros_driver2/launch_ROS1/: mid360_to_laserscan.launch
milk_vision_yolo11/outputs/: summary.txt
milk_vision_yolo11/pipeline_runs/20260329_213856/: final_result.json
milk_vision_yolo11/pipeline_runs/20260329_213856/capture/: 20260329_213905_depth.npy
milk_vision_yolo11/pipeline_runs/20260329_214602/: final_result.json
milk_vision_yolo11/pipeline_runs/20260329_214754/: final_result.json  scene_depth.npy
milk_vision_yolo11/pipeline_runs/20260329_214952/: final_result.json
milk_vision_yolo11/scripts/: estimate_position_from_mask_depth.py  run_full_pipeline.py  run_yolo11_seg_demo.py
open_vocabulary/__MACOSX/open_vocabulary/table/: ._6
open_vocabulary/open_vocabulary/: AGENTS.md  README.md  my_read.txt
open_vocabulary/open_vocabulary/API/: README.md  __init__.py  cabinet_layers_2d.py  cabinet_planes_placement_3d.py  closed_set_object_detector.py  closed_set_object_detector_cloud.py  example_usage.py  grounding_dino_api.py  grounding_sam_api.py  run_closed_set_batch.py
open_vocabulary/open_vocabulary/Grounded-SAM-2/: README.md  config.py  grounded_sam2_local_demo.py  mask_utils.py
piper_ros/: README.MD
robocup_debug/: CMakeLists.txt  package.xml
robocup_debug/scripts/: debug_01_classification.py  debug_02_perception.py  debug_03_grasp_pose.py  debug_04_pick.py  debug_05_place.py  debug_06_navigation.py
robocup_executive/: CMakeLists.txt  DRY_RUN_GUIDE.md  README.md  package.xml
robocup_executive/config/: pick_place_vision_3_15_new.yaml  task_config.yaml
robocup_executive/launch/: l515.launch  phone_webcam_view.launch  pick_place_task.launch  pick_place_vision_3_15_new.launch  system_bringup.launch
robocup_executive/scripts/: breakfast_task.py  detect_grasp_vision.py  grasp_only_vision.py  grasp_only_vision_viser.py  grasp_only_vision_viser_clean.py  grasp_view_vision.py  grasp_vision_table_up_goal_max.py  grasp_vision_table_up_goal_max（复件）.py  pick_place_dry_run.py  pick_place_dry_run_90cm.py  pick_place_run_vision.py  pick_place_task.py  pick_place_vision.py  pick_place_vision_draw.py
robocup_executive/src/robocup_executive/: __init__.py  task_data.py
robocup_executive/src/robocup_executive/states/: __init__.py  assess_scene.py  execute_pick.py  execute_place.py  init_system.py  navigate_back_to_kitchen.py  navigate_to_dest.py  navigate_to_kitchen.py  perceive_dest.py  select_target.py  serve_breakfast.py  task_completed.py
robocup_home_meta/: CMakeLists.txt  package.xml
robocup_hri/: CMakeLists.txt  README.md  package.xml
robocup_hri/launch/: hri_system.launch
robocup_manipulation/: CMakeLists.txt  README.md  package.xml
robocup_manipulation/config/: arm_poses.yaml  gripper_params.yaml
robocup_manipulation/launch/: manipulation_system.launch
robocup_manipulation/scripts/: manipulation_manager.py  pick_action_server.py  place_action_server.py
robocup_manipulation/src/robocup_manipulation/: __init__.py  gripper_controller.py  moveit_interface.py
robocup_msgs/: CMakeLists.txt  package.xml
robocup_msgs/action/: ExecuteTask.action  NavigateToLocation.action  PickObject.action  PlaceObject.action
robocup_msgs/msg/: DetectedObject.msg  DetectedObjectArray.msg  GraspPose.msg  ShelfDetectionResult.msg  ShelfLayer.msg  TaskStatus.msg
robocup_msgs/srv/: ClassifyObject.srv  ComputeGraspPose.srv  ComputePlacePose.srv  DetectObjects.srv  DetectShelf.srv
robocup_navigation/: CMakeLists.txt  README.md  package.xml
robocup_navigation/config/: locations.yaml
robocup_navigation/launch/: navigation_dwa.launch  navigation_dwa_3_14.launch  navigation_dwa_3_14_mid_math.launch  navigation_dwa_vision.launch  navigation_system.launch  navigation_teb_3_15.launch  navigation_traj.launch  navigation_vision_3_15_new.launch
robocup_navigation/scripts/: location_manager.py  navigation_action_server.py  navigation_action_server_3_15_new.py
robocup_perception/: CMakeLists.txt  README.md  package.xml
robocup_perception/config/: camera_params.yaml  classification_rules.yaml  detection_params.yaml
robocup_perception/launch/: perception_system.launch
robocup_perception/scripts/: depth.npy  grasp_pose_computer.py  object_classifier.py  object_detector_server.py  place_pose_computer.py  ros_rgb_depth.py  save_depth.py  save_image.py  save_rgb_depth.py  shelf_detector_server.py  vision_bbox_viewer_3_15_new.py  vision_service_node.py
robocup_utils/scripts/: system_check.py  test_services.py
tracer_ros/: 12.txt  SESSION_NOTES.md  read_sf.md  read_sf3_14.md  readme_sf.md
tracer_ros/tracer_base/launch/: tracer_base_3_14.launch
tracer_ros/tracer_base/src/: tracer_base_node.cpp  tracer_base_sim_node.cpp  tracer_messenger.cpp
tracer_ros/tracer_bringup/launch/: tracer_robot_base_3_14.launch
tracer_ros/tracer_gazebo_sim/: CMakeLists.txt
tracer_ros/tracer_nav/launch/: amcl.launch  ekf_odom_imu_3_14.launch  move_base.launch  my_nav.launch  nav.launch  nav_Trajectory.launch  nav_dwa.launch  nav_dwa_3_14.launch  nav_dwa_3_14_mid_math.launch  nav_new.launch  nav_teb_3_15.launch  nav_wpbh.launch  tiaoshi.txt
tracer_ros/tracer_nav/param/: costmap_common_params.yaml  dwa_local_planner_params.yaml  dwa_local_planner_params_3_14.yaml  ekf_odom_imu_3_14.yaml  global_planner_params.yaml  local_costmap_params.yaml  move_base_params.yaml  teb_local_planner_params.yaml  teb_local_planner_params_3_15.yaml
tracer_ros/tracer_nav/rviz/: z_rviz.rviz
tracer_ros/tracer_nav/scripts/: navigation_monitor_3_14.py  navigation_monitor_3_14_mid_math.py
wpb_home/wpb_home_python/scripts/: image_face_detect.py
wpb_home/wpb_home_python3/scripts/: image_face_detect.py
wpb_home/wpb_home_tutorials/nav_lidar/: costmap_common_params.yaml  dwa_local_planner_params.yaml  local_costmap_params.yaml
(+102 files in other folders)
