<?xml version="1.0"?>
<package format="2">
  <name>robocup_executive</name>
  <version>1.0.0</version>
  <description>SMACH-based task executive for RoboCup@Home Pick and Place</description>
  <maintainer email="user@todo.todo">User</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>rospy</depend>
  <depend>smach</depend>
  <depend>smach_ros</depend>
  <depend>actionlib</depend>
  <depend>robocup_msgs</depend>
</package>
