<?xml version="1.0"?>
<package format="2">
  <name>robocup_hri</name>
  <version>1.0.0</version>
  <description>Human-Robot Interaction module for RoboCup@Home</description>
  <maintainer email="user@todo.todo">User</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>rospy</depend>
  <depend>std_msgs</depend>
</package>
