<?xml version="1.0"?>
<package format="2">
  <name>robocup_navigation</name>
  <version>1.0.0</version>
  <description>Navigation module with Tracer mobile base integration</description>
  <maintainer email="user@todo.todo">User</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>rospy</depend>
  <depend>actionlib</depend>
  <depend>move_base_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>tf</depend>
  <depend>robocup_msgs</depend>
</package>
