<?xml version="1.0"?>
<package format="2">
  <name>robocup_perception</name>
  <version>1.0.0</version>
  <description>Semantic perception module for RoboCup@Home using Grounded-SAM-2</description>
  <maintainer email="user@todo.todo">User</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>image_transport</depend>
  <depend>robocup_msgs</depend>
</package>
